APIs/googleapis.com/androidpublisher/v1/python-client/README.md
# openapi-client
Accesses Android application developers' Google Play accounts.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://www.googleapis.com/androidpublisher/v1/applications
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://www.googleapis.com/androidpublisher/v1/applications"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.PurchasesApi(api_client)
    package_name = 'package_name_example' # str | The package name of the application for which this subscription was purchased (for example, 'com.some.thing').
    subscription_id = 'subscription_id_example' # str | The purchased subscription ID (for example, 'monthly001').
    token = 'token_example' # str | The token provided to the user's device when the subscription was purchased.
    alt = json # str | Data format for the response. (optional) (default to json)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional) (default to True)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)

    try:
        api_instance.androidpublisher_purchases_cancel(package_name, subscription_id, token, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip)
    except ApiException as e:
        print("Exception when calling PurchasesApi->androidpublisher_purchases_cancel: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/androidpublisher/v1/applications*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*PurchasesApi* | [**androidpublisher_purchases_cancel**](docs/PurchasesApi.md#androidpublisher_purchases_cancel) | **POST** /{packageName}/subscriptions/{subscriptionId}/purchases/{token}/cancel | 
*PurchasesApi* | [**androidpublisher_purchases_get**](docs/PurchasesApi.md#androidpublisher_purchases_get) | **GET** /{packageName}/subscriptions/{subscriptionId}/purchases/{token} | 


## Documentation For Models

 - [SubscriptionPurchase](docs/SubscriptionPurchase.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/androidpublisher**: View and manage your Google Play Developer account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/androidpublisher**: View and manage your Google Play Developer account


## Author




